--- a/finalNotebooks/DataPreperation.ipynb
+++ b/finalNotebooks/DataPreperation.ipynb
@@ -11,6 +11,44 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2572d508",
+   "metadata": {},
+   "source": [
+    "Configurable Parameters:\n",
+    "- **root (str)**: Root directory of the project (commonly set to '..').\n",
+    "- **data_set_directory (str)**: Name of the directory containing all datasets (i.e.,'input')\n",
+    "- **raw_data_set_name (str)**: Name of the raw ZIP file or raw dataset folder (i.e., 'kaggle_raw_data').\n",
+    "- **expanded_folder_name (str)**: Name of the expanded folder after extracting raw ZIP data (i.e., 'Dog Emotion').\n",
+    "- **final_data_set (str)**: Folder name of the final processed and augmented dataset used for training.\n",
+    "- **google_drive_id (str)**: ID used for Google Drive downloads (if applicable).\n",
+    "- **log_file_name (str)**: Filename for saving preprocessing logs or debug information.\n",
+    "- **split_ratios (dict)**: Dictionary defining the ratios for splitting the dataset into 'train', 'test', and 'eval' subsets.\n",
+    "- **seed**: Ensures reproducibility when shuffling or splitting the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a596dcff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Control Panel to adjust variables\n",
+    "\n",
+    "root = \"..\"\n",
+    "data_set_directory = \"input\"\n",
+    "raw_data_set_name =\"kaggle_raw_data\"\n",
+    "expanded_folder_name =\"Dog Emotion\"\n",
+    "final_data_set = \"final_split_training_augmented\"\n",
+    "google_drive_id = \"15vCDXS-3GtNHxgL4EczcxMAGQDfVCYe5\"\n",
+    "log_file_name = \"Data_preprocessing_no_dogs_detected\"\n",
+    "\n",
+    "split_ratios = {'train': 0.7, 'test': 0.15, 'eval': 0.15}\n",
+    "seed = 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2a6ac537",
    "metadata": {},
    "source": [
@@ -20,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a458e220",
    "metadata": {},
    "outputs": [],
@@ -35,6 +73,12 @@
     "import torch\n",
     "import random\n",
     "from utils.helperFunctions import is_rgb\n",
+    "import sys\n",
+    "\n",
+    "# Determine the project root - required to import DataHandler from utils folder\n",
+    "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), root))\n",
+    "if PROJECT_ROOT not in sys.path:\n",
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
     "\n",
     "from utils.DataHandler import download_dataset"
    ]
@@ -48,26 +92,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a596dcff",
+   "cell_type": "markdown",
+   "id": "2bef3ed1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data_set_directory = \"input\"\n",
-    "raw_data_set_name =\"kaggle_raw_data\"\n",
-    "expanded_folder_name =\"Dog Emotion\"\n",
-    "final_data_set = \"final_split_training_augmented\"\n",
-    "root = \"..\"\n",
-    "google_drive_id = \"15vCDXS-3GtNHxgL4EczcxMAGQDfVCYe5\"\n",
-    "log_file_name = \"Data_preprocessing_no_dogs_detected\"\n",
-    "split_ratios = {'train': 0.7, 'test': 0.15, 'eval': 0.15}\n",
-    "random.seed(42)\n"
+    "Global Variables Created:\n",
+    "- **RAW_IMAGE_ZIP_NAME (str)**: Name of the Zipfile when downloading the unprocessed dataset from the googledrive\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1bff427d",
    "metadata": {},
    "outputs": [
@@ -83,23 +118,14 @@
     }
    ],
    "source": [
-    "# Create output folder if it doesn't exist\n",
-    "RAW_IMAGE_INPUT_DIR = os.path.join(root, data_set_directory, raw_data_set_name)\n",
-    "print(RAW_IMAGE_INPUT_DIR)\n",
-    "\n",
-    "RAW_DATA_FOLDER = os.path.join(root, data_set_directory, expanded_folder_name)\n",
-    "print(RAW_DATA_FOLDER)\n",
-    "\n",
-    "OUTPUT_BASE = os.path.join(root, data_set_directory, final_data_set)\n",
-    "print(OUTPUT_BASE)\n",
-    "\n",
-    "NO_DETECT_LOG = os.path.join(root, f\"logs/{log_file_name}.txt\") \n",
-    "print(NO_DETECT_LOG)\n"
+    "RAW_IMAGE_ZIP_NAME = os.path.join(root, data_set_directory, raw_data_set_name)\n",
+    "print(RAW_IMAGE_ZIP_NAME)\n",
+    "random.seed(seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a1874b1f",
    "metadata": {},
    "outputs": [
@@ -113,7 +139,7 @@
    ],
    "source": [
     "# Downloading dataset from kaggle that is on Gdrive\n",
-    "download_dataset(expanded_folder_name,f\"https://drive.google.com/uc?id={google_drive_id}\",  F\"{RAW_IMAGE_INPUT_DIR}.zip\", \"../input\")"
+    "download_dataset(expanded_folder_name,f\"https://drive.google.com/uc?id={google_drive_id}\",  F\"{RAW_IMAGE_ZIP_NAME}.zip\", \"../input\")"
    ]
   },
   {
@@ -126,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "76061ec9",
    "metadata": {},
    "outputs": [],
@@ -189,6 +215,13 @@
     "                    filepath = os.path.join(class_path, filename)\n",
     "\n",
     "                    try:\n",
+    "                        # Removing images that are black and white\n",
+    "                        if not is_rgb(filepath):\n",
+    "                            with open(log_file_location, \"a\") as f:\n",
+    "                                f.write(f\"Grayscale or low-color image skipped: {filepath}\\n\")\n",
+    "                            print(f\"Skipped grayscale/low-color image: {filename}\")\n",
+    "                            continue\n",
+    "\n",
     "                        img = Image.open(filepath).convert(\"RGB\")\n",
     "                        results = model(filepath, conf=0.15)[0]\n",
     "\n",
