--- a/finalNotebooks/DataPreperation.ipynb
+++ b/finalNotebooks/DataPreperation.ipynb
@@ -39,7 +39,7 @@
     "data_set_directory = \"input\"\n",
     "raw_data_set_name =\"kaggle_raw_data\"\n",
     "expanded_folder_name =\"Dog Emotion\"\n",
-    "final_data_set = \"final_split_training_augmented\"\n",
+    "final_data_set = \"final_split_15Apr2025\"\n",
     "google_drive_id = \"15vCDXS-3GtNHxgL4EczcxMAGQDfVCYe5\"\n",
     "log_file_name = \"Data_preprocessing_no_dogs_detected\"\n",
     "\n",
