--- a/finalNotebooks/ENSE.ipynb
+++ b/finalNotebooks/ENSE.ipynb
@@ -45,10 +45,10 @@
     "# Control Panel to adjust variables\n",
     "root = \"..\"\n",
     "data_set_directory = \"input\"\n",
-    "final_data_set = \"final_split_training_augmented\"\n",
+    "final_data_set = \"final_split_15Apr2025\"\n",
     "root_result_folder = \"results\"\n",
     "model_directory = \"models\" \n",
-    "google_drive_id = \"15vCDXS-1XhSO100qgRuLEyopfb7-4gBp0CRjZkfg\"\n",
+    "google_drive_id = \"1XhSO100qgRuLEyopfb7-4gBp0CRjZkfg\"\n",
     "\n",
     "model_name = \"ENSE\" # Name of the model that the file is training in abbreviation\n",
     "batch_size = 64 # State the number of datapoints in each batch size"
