Saving my two models first

--- a/finalNotebooks/ENSE.ipynb
+++ b/finalNotebooks/ENSE.ipynb
@@ -13,10 +13,33 @@
    "id": "cd871ce6",
    "metadata": {},
    "source": [
-    "Our team has developed an enhanced EfficientNetB5-based architecture by integrating two key attention mechanisms in the classifier head:\n",
+    "Our team has developed an enhanced EfficientNetB5-based architecture with two channel wise attention mechanisms\n",
+    "\n",
+    "Channel wise attention mechanisms\n",
     "- Squeeze-and-Excitation (SE) Block\n",
     "- Attentional Selective Fusion (ASF) Block\n",
-    "in the calassifier head"
+    "\n",
+    "\n",
+    "In this notebook, our team evaluates the performance of this modified EfficientNet model\n",
+    "\n",
+    "**This notebook contains the following sections:**\n",
+    "1. Loading Preprocessed Dataset\n",
+    "2. Modified EfficientNet‑B5 model architecture   \n",
+    "3. Hyperparameter Tuning  \n",
+    "4. Model Training\n",
+    "5. Model Evaluation\n",
+    "\n",
+    "**Assumed project structure:**\n",
+    "```markdown\n",
+    "ROOT\n",
+    "├── notebooks\n",
+    "│   └── EfficientNetB5.ipynb\n",
+    "└── input\n",
+    "    └── final_split_15Apr2025\n",
+    "        ├── train\n",
+    "        ├── eval\n",
+    "        └── test\n",
+    "* if dataset not downloaded, dataset would download in the loading dataset section."
    ]
   },
   {
@@ -123,7 +146,7 @@
     "- **RESULTS_DIR (str)**: Path to store evaluation results and metrics, separated by model name.\n",
     "- **BEST_MODEL_PATH (str)**: Full path to the file where the best-performing model will be saved.\n",
     "- **DATASET_FOLDER (str)**: Full path to the folder containing the dataset used for training.\n",
-    "- **DEVICE (torch.device)**: The hardware device selected for training ('cuda', 'mps', or 'cpu').\n"
+    "- **DEVICE (torch.device)**: The hardware device selected for training ('cuda', 'mps', or 'cpu')."
    ]
   },
   {
@@ -153,9 +176,6 @@
     "    level=logging.INFO\n",
     ")\n",
     "ROOT_DATA_DIR = os.path.join(root, data_set_directory)\n",
-    "\n",
-    "PROCESSED_IMAGE_ZIP_NAME = os.path.join(root, data_set_directory, final_data_set)\n",
-    "print(PROCESSED_IMAGE_ZIP_NAME)\n",
     "\n",
     "# Creating the models save location\n",
     "MODEL_SAVE_DIR = os.path.join(PROJECT_ROOT, model_directory, model_name)\n",
@@ -195,7 +215,7 @@
    "outputs": [],
    "source": [
     "# Function to download the processed dataset used by the team\n",
-    "download_dataset(final_data_set,f\"https://drive.google.com/uc?id={google_drive_id}\",  F\"{PROCESSED_IMAGE_ZIP_NAME}.zip\", ROOT_DATA_DIR)"
+    "download_dataset(final_data_set,f\"https://drive.google.com/uc?id={google_drive_id}\",  F\"{DATASET_FOLDER}.zip\", ROOT_DATA_DIR)"
    ]
   },
   {
@@ -13097,7 +13117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a05c7292",
    "metadata": {},
    "outputs": [
@@ -13315,7 +13335,7 @@
     "        best_val_loss = epoch_val_loss\n",
     "        epochs_without_improvement = 0\n",
     "        # save the best model\n",
-    "        best_model_path = os.path.join(MODEL_SAVE_DIR, \"dinov2_best_model.pt\")\n",
+    "        best_model_path = os.path.join(MODEL_SAVE_DIR, f\"{model_name}_best_model.pt\")\n",
     "        torch.save(final_model.state_dict(), best_model_path)\n",
     "        logging.info(\"Model saved to: %s\",  {best_model_path})\n",
     "        logging.info(\"Epoch %d: New best model saved.\", epoch+1)\n",
