--- a/notebooks/DataPreperation.ipynb
+++ b/notebooks/DataPreperation.ipynb
@@ -6,7 +6,14 @@
    "metadata": {},
    "source": [
     "# Image Dataset Preperation\n",
-    "This notebook contains the code for cleaning and preparing the dataset to be used for the project"
+    "This notebook contains the code for cleaning and preparing the dataset to be used for the project\n",
+    "\n",
+    "Our team performed the following preprocessing:\n",
+    "- Remove black and white images\n",
+    "- Zoom into dog face in each image and ensure all images are 224 * 224 using Yolo V8\n",
+    "- Split images into train, eval and test splits\n",
+    "- Random horizontal flips & random rotation up to max 10 degrees—simulating head tilt\n",
+    "- Colour Jitter such as modifying the brightness, contrast, saturation, and hue of images—boost contrast invariance"
    ]
   },
   {
@@ -44,7 +51,8 @@
     "log_file_name = \"Data_preprocessing_no_dogs_detected\"\n",
     "\n",
     "split_ratios = {'train': 0.7, 'test': 0.15, 'eval': 0.15}\n",
-    "seed = 42"
+    "seed = 42\n",
+    "num_augmentations = 2  # You can tweak this"
    ]
   },
   {
@@ -74,6 +82,9 @@
     "import random\n",
     "from utils.helperFunctions import is_rgb\n",
     "import sys\n",
+    "from torchvision import transforms\n",
+    "import glob\n",
+    "\n",
     "\n",
     "# Determine the project root - required to import DataHandler from utils folder\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), root))\n",
@@ -257,14 +268,40 @@
     "                    save_dir = os.path.join(output_data_folder, split, label)\n",
     "                    os.makedirs(save_dir, exist_ok=True)\n",
     "                    save_path = os.path.join(save_dir, original_filename)\n",
-    "                    img.save(save_path)\n",
+    "                    augmentation_pipeline = transforms.Compose([\n",
+    "                        transforms.RandomHorizontalFlip(p=0.5),\n",
+    "                        transforms.RandomRotation(degrees=10),\n",
+    "                        transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.05),\n",
+    "                        transforms.Resize((224, 224))\n",
+    "                    ])\n",
+    "\n",
+    "                    # Inside your saving loop:\n",
+    "                    for split, items in splits.items():\n",
+    "                        for img, label, original_filename in items:\n",
+    "                            save_dir = os.path.join(output_data_folder, split, label)\n",
+    "                            os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "                            # Save original cropped image\n",
+    "                            save_path = os.path.join(save_dir, original_filename)\n",
+    "                            img.save(save_path)\n",
+    "                            split_counts[split] += 1\n",
+    "\n",
+    "                            # If it's part of the training split, do augmentation\n",
+    "                            if split == 'train':\n",
+    "                                for i in range(num_augmentations):\n",
+    "                                    augmented = augmentation_pipeline(img)\n",
+    "                                    aug_filename = f\"{os.path.splitext(original_filename)[0]}_aug{i+1}.jpg\"\n",
+    "                                    augmented.save(os.path.join(save_dir, aug_filename))\n",
+    "                                    split_counts[split] += 1\n",
     "                    split_counts[split] += 1\n",
     "\n",
     "            # Summary\n",
-    "            print(\"\\nAll-in-One Summary:\")\n",
-    "            print(f\"Total cropped dog images : {total}\")\n",
+    "            print(\"\\n📊 All-in-One Summary:\")\n",
+    "            print(f\"Total cropped dog images before augmentation : {total}\")\n",
     "            for split in split_counts:\n",
-    "                print(f\"{split.capitalize()} images            : {split_counts[split]}\")\n",
+    "                split_dir = os.path.join(output_data_folder, split)\n",
+    "                image_count = len(glob.glob(os.path.join(split_dir, '**', '*.jpg'), recursive=True))\n",
+    "                print(f\"{split.capitalize()} images saved to {split_dir} : {image_count}\")\n",
     "            print(f\"Final dataset saved to: {output_data_folder}\")\n",
     "            print(f\"No-dog log file saved at: {log_file_location}\")\n",
     "\n",
