--- a/notebooks/ENSESwin.ipynb
+++ b/notebooks/ENSESwin.ipynb
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "276f8fe8",
    "metadata": {},
    "outputs": [
@@ -14079,7 +14079,7 @@
     "    \"dropout\": tune.uniform(0.39, 0.41),\n",
     "    \"hidden_sizes\": tune.choice([[256, 128], [512, 256], None]),\n",
     "    \"activation\": tune.choice([\"relu\", \"tanh\", \"sigmoid\", \"leakyrelu\"]), #Removed gelu\n",
-    "    \"unfreeze_blocks\": tune.choice([[6, 7]]),\n",
+    "    \"unfreeze_blocks\": tune.choice([[6, 7], [7], None]),\n",
     "    \"num_epochs\": 10,\n",
     "    \"optimiser\": tune.choice([\n",
     "        lambda params, lr, wd: optim.Adam(params, lr=lr, weight_decay=wd),\n",
