Updating the notebooks and the .gitignore

--- a/notebooks/ENSE.ipynb
+++ b/notebooks/ENSE.ipynb
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5c0105ed",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
     "        w = self.fc(self.avg(x))\n",
     "        return x * w\n",
     "    \n",
-    "class BaseEfficientNetB5(nn.Module):\n",
+    "class SEEfficientNetB5(nn.Module):\n",
     "    \"\"\"\n",
     "    EfficientNetB5-based classifier with optional Squeeze-and-Excitation (SE) block, \n",
     "    customizable classifier head, and partial layer unfreezing for fine-tuning.\n",
@@ -425,7 +425,7 @@
     "                                                    Default is None, which means no blocks are unfrozen.\n",
     "\n",
     "        \"\"\"\n",
-    "        super(BaseEfficientNetB5, self).__init__()\n",
+    "        super(SEEfficientNetB5, self).__init__()\n",
     "        weights = EfficientNet_B5_Weights.DEFAULT\n",
     "        self.backbone = efficientnet_b5(weights=weights)\n",
     "        in_features = self.backbone.classifier[1].in_features\n",
@@ -1569,7 +1569,7 @@
    ],
    "source": [
     "print(f\"Using device: {DEVICE}\")\n",
-    "model = BaseEfficientNetB5(num_classes=4, dropout=0.3, hidden_sizes=[256, 128], activation='relu', unfreeze_blocks=[7]).to(DEVICE)\n",
+    "model = SEEfficientNetB5(num_classes=4, dropout=0.3, hidden_sizes=[256, 128], activation='relu', unfreeze_blocks=[7]).to(DEVICE)\n",
     "print(\"Model instantiated:\", model.__class__.__name__)\n",
     "print(model)"
    ]
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "49ba66be",
    "metadata": {},
    "outputs": [],
@@ -1636,7 +1636,7 @@
     "        print(f\"Checkpoint Folder exists\")\n",
     "    \n",
     "    # instantiate model with hyperparameters from config\n",
-    "    model = BaseEfficientNetB5(\n",
+    "    model = SEEfficientNetB5(\n",
     "        num_classes=4,\n",
     "        dropout=config.get(\"dropout\", 0.3),\n",
     "        hidden_sizes=config.get(\"hidden_sizes\", None),\n",
@@ -2361,12 +2361,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "dc7018de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_model = BaseEfficientNetB5(\n",
+    "final_model = SEEfficientNetB5(\n",
     "    num_classes=4,\n",
     "    dropout=best_config[\"dropout\"],\n",
     "    hidden_sizes=best_config[\"hidden_sizes\"],\n",
