--- a/notebooks/EfficientNetB5.ipynb
+++ b/notebooks/EfficientNetB5.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14159,7 +14159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dog_emotions",
+   "display_name": "ADLTEAM",
    "language": "python",
    "name": "python3"
   },
