Readme and testing function

--- a/notebooks/DINOv2.ipynb
+++ b/notebooks/DINOv2.ipynb
@@ -12467,7 +12467,7 @@
     "#     'lr': 0.0007591104805282694,\n",
     "#     'weight_decay': 1.7541893487450798e-05,\n",
     "#     'dropout': 0.399035382022254,\n",
-    "#     'hidden_sizes': 512, 256],\n",
+    "#     'hidden_sizes': [512, 256],\n",
     "#     'activation': 'relu',\n",
     "#     'freeze_backbone': True,\n",
     "#     'num_epochs': 10,\n",
