--- a/notebooks/Swin.ipynb
+++ b/notebooks/Swin.ipynb
@@ -1285,19 +1285,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### Good configs, saved after various experimentations\n",
     "# This cell can be skipped if hyper parameter tuning was run\n",
     "# best_config = {\n",
-    "#     'lr': 2.5883109107619077e-05,\n",
-    "#     'weight_decay': 1.5994372155012393e-05,\n",
-    "#     'dropout': 0.4016587828927856,\n",
-    "#     'hidden_sizes': None,\n",
-    "#     'activation': 'leakyrelu',\n",
-    "#     'unfreeze_blocks': [6, 7],\n",
+    "#     'lr': 0.0008118831797409269,\n",
+    "#     'weight_decay': 3.43946938769063e-05,\n",
+    "#     'dropout': 0.22260930176319738,\n",
+    "#     'hidden_sizes': [128],\n",
+    "#     'activation': 'relu',\n",
+    "#     'freeze_backbone': True, \n",
     "#     'num_epochs': 10,\n",
     "#     'optimiser': lambda params, lr, wd: optim.Adam(params, lr=lr, weight_decay=wd),\n",
     "#     'criterion': lambda: nn.CrossEntropyLoss()\n",
