--- a/notebooks/ENSE.ipynb
+++ b/notebooks/ENSE.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Channel wise attention mechanisms\n",
     "- Squeeze-and-Excitation (SE) Block\n",
-    "- Attentional Selective Fusion (ASF) Block\n",
+    "- Channel Attention Block (CA) Block\n",
     "\n",
     "\n",
     "In this notebook, our team evaluates the performance of this modified EfficientNet model\n",
@@ -347,24 +347,26 @@
     "        y = self.interaction(y).view(b, c, 1, 1)\n",
     "        return x * y.expand_as(x)\n",
     "\n",
-    "class AttentionalSelectiveFusion(nn.Module):\n",
+    "class ChannelAttentionBlock(nn.Module):\n",
     "    \"\"\"\n",
-    "    Attentional Selective Fusion (ASF) Block for Channel-wise Feature Recalibration.\n",
+    "    Channel Attention Block (Lightweight SE-style Attention)\n",
     "\n",
-    "    This module enhances the representational capacity of convolutional neural networks\n",
-    "    by applying a lightweight channel attention mechanism. It uses global average pooling\n",
-    "    followed by a bottleneck transformation and sigmoid activation to compute \n",
-    "    per-channel attention weights. The input tensor is then modulated by these weights,\n",
-    "    selectively emphasizing informative features.\n",
+    "    This module applies channel-wise attention to recalibrate the importance of each feature channel.\n",
+    "    Unlike traditional Squeeze-and-Excitation (SE) blocks that use fully connected (linear) layers,\n",
+    "    this implementation uses 1×1 convolutions for better compatibility with convolutional architectures.\n",
+    "\n",
+    "    It compresses spatial dimensions using global average pooling, passes the result through a \n",
+    "    bottleneck with ReLU activation, and applies a sigmoid gating mechanism to rescale each channel.\n",
     "\n",
     "    Args:\n",
     "        in_channels (int): Number of input and output channels in the input feature map.\n",
     "\n",
     "    Forward Input:\n",
-    "        x (torch.Tensor): Feature map of shape (batch_size, in_channels, height, width)\n",
+    "        x (torch.Tensor): Input tensor of shape (batch_size, in_channels, height, width)\n",
     "\n",
     "    Forward Output:\n",
-    "        torch.Tensor: Recalibrated feature map of the same shape as input\"\"\"\n",
+    "        torch.Tensor: Output tensor of the same shape, with recalibrated channel-wise responses.\n",
+    "    \"\"\"\n",
     "    def __init__(self, in_channels: int):\n",
     "        super().__init__()\n",
     "        self.avg = nn.AdaptiveAvgPool2d(1)\n",
@@ -445,7 +447,7 @@
     "            layers.extend([\n",
     "                nn.Unflatten(1, (in_features, 1, 1)),\n",
     "                SqueezeExcitationBlock(in_features),\n",
-    "                AttentionalSelectiveFusion(in_features),\n",
+    "                ChannelAttentionBlock(in_features),\n",
     "                nn.Flatten()\n",
     "            ])\n",
     "        \n",
